// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jira Create tests Basic snapshot - deploymentform mode: jira-create-deploymentform 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        pipeline.jiraApprovalStep.connectorRef
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
          data-testid="cr-field-spec.conectorRef"
          style="width: 360px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <p
                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    tabindex="0"
                  >
                    c1
                  </p>
                </span>
              </span>
              <div
                class="rightStatus"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                  data-testid="crf-status"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal tag"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      project
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.projectKey"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.projectKey"
        >
          pipeline.jiraApprovalStep.project
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.projectKey"
                placeholder="pipeline.jiraCreateStep.selectProject"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueType"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.issueType"
        >
          pipeline.jiraApprovalStep.issueType
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.issueType"
                placeholder="pipeline.jiraApprovalStep.issueTypePlaceholder"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.summary"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.summary"
        >
          summary
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.summary"
            placeholder="pipeline.jiraCreateStep.summaryPlaceholder"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.description"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.description"
        >
          description
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-fill"
          maxlength="1024"
          name="spec.description"
          placeholder="common.descriptionPlaceholder"
        />
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Create tests Basic snapshot - input variable view: jira-create-input variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  >
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            name
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            timeout
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          1d
        </span>
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            connectorRef
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            projectKey
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow"
    >
      <div
        class="main"
      >
        <div
          class="text variable-name-cell"
        >
          <span
            class=""
          >
            issueType
          </span>
        </div>
        <div
          class="bp3-popover-wrapper btnWrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main copyIcon StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 8 9"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Jira Create tests Basic snapshot - inputset mode but no runtime values: jira-create-inputset-noruntime 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Create tests Basic snapshot - inputset mode: input set with errors 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        pipeline.jiraApprovalStep.connectorRef
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
          data-testid="cr-field-spec.conectorRef"
          style="width: 360px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <p
                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    tabindex="0"
                  >
                    c1
                  </p>
                </span>
              </span>
              <div
                class="rightStatus"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                  data-testid="crf-status"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal tag"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      project
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.projectKey"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.projectKey"
        >
          pipeline.jiraApprovalStep.project
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.projectKey"
                placeholder="pipeline.jiraCreateStep.selectProject"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.jiraApprovalStep.validations.project
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueType"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.issueType"
        >
          pipeline.jiraApprovalStep.issueType
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.issueType"
                placeholder="pipeline.jiraApprovalStep.issueTypePlaceholder"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.jiraApprovalStep.validations.issueType
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.summary"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.summary"
        >
          summary
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group bp3-intent-danger"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.summary"
            placeholder="pipeline.jiraCreateStep.summaryPlaceholder"
            type="text"
            value=""
          />
        </div>
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.jiraCreateStep.validations.summary
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.description"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.description"
        >
          description
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-fill"
          maxlength="1024"
          name="spec.description"
          placeholder="common.descriptionPlaceholder"
        />
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "spec": {
    "connectorRef": "pipeline.jiraApprovalStep.validations.connectorRef",
    "projectKey": "pipeline.jiraApprovalStep.validations.project",
    "issueType": "pipeline.jiraApprovalStep.validations.issueType",
    "summary": "pipeline.jiraCreateStep.validations.summary"
  }
}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Create tests Deploymentform readonly mode: jira-create-deploymentform-readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        pipeline.jiraApprovalStep.connectorRef
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
          data-testid="cr-field-spec.conectorRef"
          style="width: 360px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <p
                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    tabindex="0"
                  >
                    c1
                  </p>
                </span>
              </span>
              <div
                class="rightStatus"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                  data-testid="crf-status"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-minimal tag"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      project
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.projectKey"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.projectKey"
        >
          pipeline.jiraApprovalStep.project
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.projectKey"
                placeholder="pipeline.jiraCreateStep.selectProject"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueType"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.issueType"
        >
          pipeline.jiraApprovalStep.issueType
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-popover-wrapper Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="spec.issueType"
                placeholder="pipeline.jiraApprovalStep.issueTypePlaceholder"
                style="padding-right: 0px;"
                type="text"
                value=""
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.summary"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.summary"
        >
          summary
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="spec.summary"
            placeholder="pipeline.jiraCreateStep.summaryPlaceholder"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.description"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.description"
        >
          description
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <textarea
          autocomplete="off"
          class="bp3-input bp3-fill"
          maxlength="1024"
          name="spec.description"
          placeholder="common.descriptionPlaceholder"
        />
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Create tests Edit Stage - readonly view: edit-stage-readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="formGroup lg"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="jiraCreate_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup sm"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="timeout-1"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraCreate_timeout"
              >
                pipelineSteps.timeoutLabel
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-disabled bp3-fill"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="5s"
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="divider"
        />
        <div
          class="formGroup lg"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraCreate_spec.connectorRef"
              >
                pipeline.jiraApprovalStep.connectorRef
              </span>
            </div>
            <div
              class="bp3-form-group connector"
              data-id="undefined-2"
              style="margin-bottom: 0px;"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  style="width: 390px;"
                >
                  <button
                    class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-spec.connectorRef"
                    disabled=""
                    style="width: 390px;"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              c1
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    disabled=""
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.projectKey-3"
          >
            <label
              class="bp3-label"
              for="spec.projectKey"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraCreate_spec.projectKey"
              >
                pipeline.jiraApprovalStep.project
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="spec.projectKey"
                        placeholder="pipeline.jiraCreateStep.selectProject"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.issueType-4"
          >
            <label
              class="bp3-label"
              for="spec.issueType"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraCreate_spec.issueType"
              >
                pipeline.jiraApprovalStep.issueType
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="spec.issueType"
                        placeholder="pipeline.jiraApprovalStep.issueTypePlaceholder"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.summary-5"
          >
            <label
              class="bp3-label"
              for="spec.summary"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraCreate_spec.summary"
              >
                summary
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="spec.summary"
                    placeholder="pipeline.jiraCreateStep.summaryPlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="noLookDivider"
        />
        <div
          class="Accordion--accordion accordion"
        >
          <div
            class="Accordion--panel"
            data-open="false"
            data-testid="optional-config-panel"
          >
            <div
              class="Accordion--summary"
              data-testid="optional-config-summary"
            >
              <div
                class="Accordion--chevron"
              />
              <div
                class="Accordion--label"
              >
                common.optionalConfig
              </div>
            </div>
            <div
              class="bp3-collapse Accordion--collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
